# enemane-ai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  prompt.md  pyproject.toml
.devcontainer/: devcontainer.json
src/enemane_ai/: __init__.py  analyzer.py  app.py
tests/: test_analyzer.py  test_app.py
